tests/analyzer/errors/while.rv
fn main() {
    while 4 {}
}
